metadata/sf-prod/force-app/main/default/objects/workspan__AqLog__c/workspan__AqLog__c.object-meta.xml
<CustomObject>
    <description>Event logging object.</description>
    <label>Log</label>
    <nameField>
        <displayFormat>L-{000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>