metadata/sf-prod/force-app/main/default/objects/workspan__AqLog__c/fields/workspan__Code__c.field-meta.xml
<CustomField>
    <fullName>workspan__Code__c</fullName>
    <description>Unique programmatic identifier for the event, use for filtering, workflows, etc.</description>
    <inlineHelpText>Unique programmatic identifier for the event, use for filtering, workflows, etc.</inlineHelpText>
    <label>Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>