metadata/sf-prod/force-app/main/default/objects/workspan__AqLog__c/fields/workspan__Detail__c.field-meta.xml
<CustomField>
    <fullName>workspan__Detail__c</fullName>
    <description>Detail such as stack trace, should be in JSON format whenever possible.</description>
    <inlineHelpText>Detail such as stack trace, should be in JSON format whenever possible.</inlineHelpText>
    <label>Detail</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>