metadata/sf-prod/force-app/main/default/objects/workspan__AqLog__c/fields/workspan__Level__c.field-meta.xml
<CustomField>
    <fullName>workspan__Level__c</fullName>
    <description>Specifies whether the event is directed to the end user, indicates a business rule violation, or indicates an internal error. Used to determine the amount of detail shown to the end user.</description>
    <inlineHelpText>Specifies whether the event is directed to the end user, indicates a business rule violation, or indicates an internal error. Used to determine the amount of detail shown to the end user.</inlineHelpText>
    <label>Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>