metadata/sf-prod/force-app/main/default/objects/workspan__AqLog__c/fields/workspan__LogDate__c.field-meta.xml
<CustomField>
    <fullName>workspan__LogDate__c</fullName>
    <defaultValue>Now()</defaultValue>
    <description>Date and time of the event.</description>
    <inlineHelpText>Date and time of the event.</inlineHelpText>
    <label>Log Date</label>
    <type>DateTime</type>
</CustomField>