metadata/sf-prod/force-app/main/default/objects/workspan__AqLog__c/fields/workspan__Message__c.field-meta.xml
<CustomField>
    <fullName>workspan__Message__c</fullName>
    <description>The main text message associated with the event.</description>
    <inlineHelpText>The main text message associated with the event.</inlineHelpText>
    <label>Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>