metadata/sf-prod/force-app/main/default/objects/workspan__AqLog__c/fields/workspan__Parent__c.field-meta.xml
<CustomField>
    <fullName>workspan__Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Enables hierarchical event logs, where one parent event log has multiple child logs.</description>
    <inlineHelpText>Enables hierarchical event logs, where one parent event log has multiple child logs.</inlineHelpText>
    <label>Parent</label>
    <referenceTo>workspan__AqLog__c</referenceTo>
    <relationshipLabel>Child Logs</relationshipLabel>
    <relationshipName>ChildLogs</relationshipName>
    <type>Lookup</type>
</CustomField>