metadata/sf-prod/force-app/main/default/objects/workspan__AqLog__c/fields/workspan__RelatedRecord__c.field-meta.xml
<CustomField>
    <fullName>workspan__RelatedRecord__c</fullName>
    <description>Hyperlink to the related record.</description>
    <formula>HYPERLINK(&apos;/&apos; + workspan__RelatedRecordId__c, workspan__RelatedRecordName__c)</formula>
    <label>Related Record</label>
    <type>Text</type>
</CustomField>