metadata/sf-prod/force-app/main/default/objects/workspan__AqLog__c/fields/workspan__RelatedRecordId__c.field-meta.xml
<CustomField>
    <fullName>workspan__RelatedRecordId__c</fullName>
    <description>Salesforce ID of the record related to the log.</description>
    <externalId>true</externalId>
    <inlineHelpText>Salesforce ID of the record related to the log.</inlineHelpText>
    <label>Related Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>