metadata/sf-prod/force-app/main/default/objects/workspan__AqLog__c/fields/workspan__RelatedRecordName__c.field-meta.xml
<CustomField>
    <fullName>workspan__RelatedRecordName__c</fullName>
    <description>Name of the record related to the log.</description>
    <label>Related Record Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>