metadata/sf-prod/force-app/main/default/objects/workspan__AqLog__c/fields/workspan__RelatedRecordType__c.field-meta.xml
<CustomField>
    <fullName>workspan__RelatedRecordType__c</fullName>
    <description>Object type of the related record.</description>
    <label>Related Record Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>