metadata/sf-prod/force-app/main/default/objects/workspan__AqLog__c/fields/workspan__ResultType__c.field-meta.xml
<CustomField>
    <fullName>workspan__ResultType__c</fullName>
    <description>When the event indicates successful result of an operation, this indicates the data type of the result.</description>
    <inlineHelpText>When the event indicates successful result of an operation, this indicates the data type of the result.</inlineHelpText>
    <label>Result Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>