metadata/sf-prod/force-app/main/default/objects/workspan__AqLog__c/fields/workspan__ScopeType__c.field-meta.xml
<CustomField>
    <fullName>workspan__ScopeType__c</fullName>
    <description>The type of object that the scope refers to.</description>
    <inlineHelpText>The type of object that the scope refers to.</inlineHelpText>
    <label>Scope Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>