metadata/sf-prod/force-app/main/default/objects/workspan__AqLog__c/fields/workspan__Source__c.field-meta.xml
<CustomField>
    <fullName>workspan__Source__c</fullName>
    <description>Indicates the class, function, page, or other component where the event originated.</description>
    <inlineHelpText>Indicates the class, function, page, or other component where the event originated.</inlineHelpText>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>