metadata/sf-prod/force-app/main/default/objects/workspan__AqLog__c/fields/workspan__Status__c.field-meta.xml
<CustomField>
    <fullName>workspan__Status__c</fullName>
    <description>Indicates how this event has been dealt with.</description>
    <inlineHelpText>Indicates how this event has been dealt with.</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>