metadata/sf-prod/force-app/main/default/objects/workspan__AqLog__c/listViews/workspan__All.listView-meta.xml
<ListView>
    <fullName>workspan__All</fullName>
    <columns>NAME</columns>
    <columns>workspan__LogDate__c</columns>
    <columns>workspan__Level__c</columns>
    <columns>workspan__Severity__c</columns>
    <columns>workspan__Message__c</columns>
    <columns>workspan__RelatedRecord__c</columns>
    <columns>workspan__ResultType__c</columns>
    <columns>workspan__Status__c</columns>
    <columns>workspan__Source__c</columns>
    <columns>workspan__Scope__c</columns>
    <columns>workspan__Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>